testsuite/tests/name_resolution/non_visible_dependency/test.adb
procedure Test is
begin
   Foo.Bar;
   pragma Test_Statement;
end Test;
